[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/optionsmenu/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://nodes/manager/ScoreboardManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/SS_drillEnemy2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/newitem_weapongem.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/newitem_medal.png" type="Texture" id=5]
[ext_resource path="res://nodes/vfx/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/themes/default.theme" type="Theme" id=7]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Options" type="Control" parent="Control/CanvasLayer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 256.0

[node name="OptionsList" type="Control" parent="Control/CanvasLayer/Options"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 240.0
theme = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer/Options/OptionsList"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ResetScoreboardButton" type="Button" parent="Control/CanvasLayer/Options/OptionsList/VBoxContainer"]
margin_top = 100.0
margin_right = 176.0
margin_bottom = 114.0
text = "Reset Scoreboard"

[node name="SendFeedbackButton" type="Button" parent="Control/CanvasLayer/Options/OptionsList/VBoxContainer"]
margin_top = 118.0
margin_right = 176.0
margin_bottom = 132.0
focus_neighbour_top = NodePath("../ResetScoreboardButton")
focus_neighbour_bottom = NodePath("../../../../Navigation/ReturnButton")
text = "Send Feedback"

[node name="OptionsEdit" type="Control" parent="Control/CanvasLayer/Options"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -311.0
margin_top = 8.0
margin_right = -7.0
margin_bottom = 240.0

[node name="HowToPlayLabel" type="Label" parent="Control/CanvasLayer/Options/OptionsEdit"]
margin_right = 304.0
margin_bottom = 159.0
text = "How to play

WASD: Movement
Z: Use Main Weapon
X: Use Sub Weapon
SHIFT: Focus mode
"
align = 1
valign = 1

[node name="EnemyIcon" type="Label" parent="Control/CanvasLayer/Options/OptionsEdit"]
margin_left = 47.0
margin_top = 136.0
margin_right = 295.0
margin_bottom = 208.0
text = "Shoot down enemies to fill multiplier gauge.
Multiplier levels increase score gained."
valign = 1
autowrap = true

[node name="Sprite" type="Sprite" parent="Control/CanvasLayer/Options/OptionsEdit/EnemyIcon"]
position = Vector2( -13, 32 )
texture = ExtResource( 3 )
hframes = 5

[node name="CoinIcon" type="Label" parent="Control/CanvasLayer/Options/OptionsEdit"]
margin_left = 47.0
margin_top = 216.0
margin_right = 295.0
margin_bottom = 248.0
text = "Medal: High amount of score gain on pickup"
valign = 1
autowrap = true

[node name="Sprite" type="Sprite" parent="Control/CanvasLayer/Options/OptionsEdit/CoinIcon"]
position = Vector2( -24, 16 )
texture = ExtResource( 5 )

[node name="GemIcon" type="Label" parent="Control/CanvasLayer/Options/OptionsEdit"]
margin_left = 47.0
margin_top = 256.0
margin_right = 295.0
margin_bottom = 288.0
text = "Gem: Levels up machine's main weapon"
valign = 1
autowrap = true

[node name="Sprite" type="Sprite" parent="Control/CanvasLayer/Options/OptionsEdit/GemIcon"]
position = Vector2( -24, 16 )
texture = ExtResource( 4 )

[node name="Navigation" type="Control" parent="Control/CanvasLayer"]
margin_left = 8.0
margin_top = 288.0
margin_right = 632.0
margin_bottom = 312.0
theme = ExtResource( 7 )

[node name="ReturnButton" type="Button" parent="Control/CanvasLayer/Navigation"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 64.0
focus_neighbour_top = NodePath("../../Options/OptionsList/VBoxContainer/SendFeedbackButton")
text = "Return"

[node name="ScoreboardManager" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Control/CanvasLayer/Options/OptionsList/VBoxContainer/ResetScoreboardButton" to="." method="_on_ResetScoreboardButton_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Options/OptionsList/VBoxContainer/SendFeedbackButton" to="." method="_on_SendFeedbackButton_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Navigation/ReturnButton" to="." method="_on_ReturnButton_pressed"]
